--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" , dir="ltr">
+  <head>
+    <meta charset="utf-8" />
+    <title>My Budget App</title>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <title>My Budget App</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
-</head>
-
-<body>
-  <div id="app">
-
-  </div>
-</body>
-<script type="text/javascript" src="./bundle.js"></script>
-
+  <body>
+    <div id="app">
+      <h1>This is working!</h1>
+    </div>
+  </body>
+  <script type="text/javascript" src="./bundle.js"></script>
 </html>
