--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,9 +7,7 @@
   </head>
 
   <body>
-    <div id="app">
-      <h1>This is working!</h1>
-    </div>
+    <div id="app"></div>
   </body>
   <script type="text/javascript" src="./bundle.js"></script>
 </html>
